--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html><!DOCTYPE html>
 <head>
-
 </head>
 <body>
-    hello World!
+    <h1>Link to page <a href ="sykc.github.io/BDomain.github.io">sykc.github.io/BDomain.github.io</a></h1>
 </body>
    
 </html>
