Updated link to other page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-    <h1>Link to page <a href ="sykc.github.io/BDomain.github.io">sykc.github.io/BDomain.github.io</a></h1>
+    <h1>Link to page <a href ="https://sykc.github.io/ADomain.github.io">sykc.github.io/BDomain.github.io</a></h1>
 </body>
    
 </html>
