--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
 </head>
 <body>
-    Link to page <a href ="https://sykc.github.io/ADomain.github.io">sykc.github.io/BDomain.github.io</a>
+    Link to page <a href ="https://sykc2.github.io/BDomain.github.io">sykc.github.io/BDomain.github.io</a>
 </body>
    
 </html>
