--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WXTVKJK');</script>
     <!-- End Google Tag Manager -->
+    <title>SubDomainA on domain Github</title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
