Link to Glitch Domain

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <h1>SubDomainA</h1>
-    Link to page <a href ="https://sykc2.github.io/BDomain.github.io">sykc2.github.io/BDomain.github.io</a>
+    Link to page <a href ="https://sykc2.github.io/BDomain.github.io">sykc2.github.io/BDomain.github.io</a><br/>
+    Link to Glitch Domain <a href ="https://crossdomain.glitch.me/">crossdomain.glitch.me/</a>
 </body>
    
 </html>
