click me button added

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <p>
         Link to Glitch Domain <a href ="https://crossdomain.glitch.me/">crossdomain.glitch.me</a>!
     </p>
+    <button>Click me!</button>
   </body>
 </html>
