--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </script>
     <!-- End Google Tag Manager -->
 
-        <!-- Google Tag Manager Glitch Container-->
+    <!-- Google Tag Manager Glitch Container-->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-            })(window,document,'script','dataLayer','GTM-KXTRQXG');</script>
-            <!-- End Google Tag Manager -->
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-KXTRQXG');</script>
+    <!-- End Google Tag Manager -->
 
 
     <meta charset="utf-8">
@@ -27,7 +27,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>SubDomainA on domain Github</title>
-    
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        window.dataLayer.push({
+            'event' : 'countryCodePush',
+            'Country' : 'countryA'
+        })
+    </script>
 </head>  
 <body>
 
